import "KeyValuePackageResponse.proto";


option java_outer_classname="BulkGetResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message BulkGetResponse {
	optional KeyValuePackageResponse keyValuePackage = 1;
}